--- a/src/pages/main/styles.css
+++ b/src/pages/main/styles.css
@@ -39,3 +39,30 @@
     background: #da552f;
     color: #FFF;
 }
+
+.post-list .actions {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.post-list .actions button {
+    padding: 10px;
+    border-radius: 5px;
+    border: 0;
+    background: #da552f;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.post-list .actions button:hover {
+    opacity: 0.7;
+}
+
+.post-list .actions button[disabled] {
+    opacity: 0.5;
+    cursor: default;
+    pointer-events: none;
+}
